Fixed overflow on main-page.

--- a/css/main-page.css
+++ b/css/main-page.css
@@ -233,7 +233,7 @@
     cursor: pointer;
 }
 
-.next:hover, .next:focus {
+.next:hover {
     background-color: #FFF;
     color:  var(--section-color);
 }
